# intervals-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  smithery.yaml
.cursor/rules/: api-patterns.mdc  development-workflow.mdc  project-overview.mdc  python-best-practices.mdc  testing-patterns.mdc
.github/: funding.yml
.github/workflows/: pylint.yml  python-app.yml  stale.yml  test.yml
src/intervals_mcp_server/: server.py
src/intervals_mcp_server/utils/: formatting.py  types.py
tests/: sample_data.py  test_formatting.py  test_make_intervals_request.py  test_server.py
tests/ressources/: wellness_entry.json  wellness_entry_formatted.txt
